--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "ecom",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "proxy": "http://localhost:4000",
   "keywords": [],
@@ -13,6 +14,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "stripe": "^12.10.0"
+    "stripe": "^12.11.0"
   }
 }
